Z-Index issue has been fixed in Google Chrome right now.

--- a/Resources/Stylesheets/OfficeUI.Core.less
+++ b/Resources/Stylesheets/OfficeUI.Core.less
@@ -39,7 +39,7 @@
 
 /* ---- OfficeUI ribbon styling. ---- */
 #OfficeUI .ribbon { position: relative; top: -30px; }
-#OfficeUI .ribbon .tabs { border-bottom: 1px solid @defaultGrayRibbon; height: 50px; position: relative; z-index: 50; }
+#OfficeUI .ribbon .tabs { border-bottom: 1px solid @defaultGrayRibbon; height: 50px; position: relative; z-index: 150; }
 #OfficeUI .ribbon .tabs li { display: inline-block; }
 #OfficeUI .ribbon .tabs .tab-group { position: relative; top: 25px; }
 #OfficeUI .ribbon .tabs .tab-group .label { height: 25px; line-height: 24px; padding: 0 13px 0 12px; text-align: center; text-transform: uppercase; }
